# glz-sqlgen

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  meson.build  pyproject.toml  pytest.ini
include/glz_sqlgen/: Result.hpp  advanced_conditions.hpp  aggregates.hpp  col.hpp  common_types.hpp  constraints.hpp  core.hpp  create_table.hpp  delete_from.hpp  functions.hpp  group_by.hpp  having.hpp  insert.hpp  join.hpp  limit.hpp  literals.hpp  order_by.hpp  query_builder.hpp  query_builders.hpp  query_clauses.hpp  select_from.hpp  sqlite.hpp  update.hpp  where.hpp
include/glz_sqlgen/constraints/: Char.hpp  ForeignKey.hpp  NotNull.hpp  PrimaryKey.hpp  Unique.hpp  Varchar.hpp  domain_types.hpp  metadata.hpp  specialized_types.hpp  traits.hpp  validated_types.hpp  wrapper_types.hpp
include/glz_sqlgen/sqlite/: Connection.hpp  Iterator.hpp
include/glz_sqlgen/transpilation/: Aggregate.hpp  As.hpp  Col.hpp  Condition.hpp  Desc.hpp  Function.hpp  Join.hpp  Operation.hpp  Operator.hpp  Set.hpp  Value.hpp  aggregate_sql.hpp  field_list.hpp  group_by_clause.hpp  having_clause.hpp  join_clause.hpp  order_by_limit.hpp  quote.hpp  table_info.hpp  to_sql_string.hpp  to_sql_type.hpp  to_transpilation_type.hpp  where_clause.hpp
include/sqlgen/: advanced_conditions.hpp  constraints.hpp  core.hpp  functions.hpp  query_builders.hpp  query_clauses.hpp  sqlite.hpp  transpilation_advanced.hpp  transpilation_core.hpp  transpilation_sql_gen.hpp
include/sqlgen/constraints/: domain_types.hpp  traits.hpp  wrapper_types.hpp
include/sqlgen/sqlite/: Connection.hpp  Iterator.hpp
src/: query_builder.cpp
src/sqlite/: Connection.cpp  Iterator.cpp
subprojects/: glaze.wrap  gtest.wrap  sqlgen.wrap
subprojects/packagefiles/glaze/: meson.build
subprojects/packagefiles/gtest/: meson.build
subprojects/packagefiles/sqlgen/: meson.build
tests/: meson.build  test_query_builder.cpp
tests/integration/: test_sqlite.cpp
tests/unit/: test_advanced_conditions.cpp  test_aggregates.cpp  test_col.cpp  test_constraints.cpp  test_create_table_constraints.cpp  test_date_functions.cpp  test_insert_update_delete.cpp  test_joins.cpp  test_literals.cpp  test_math_functions.cpp  test_phase10_types.cpp  test_select.cpp  test_sql_generation.cpp  test_string_functions.cpp  test_table_info.cpp  test_transpilation.cpp
