[project]
name = "glz-sqlgen"
version = "0.1.0"
description = "A C++23 implementation of sqlgen using glaze instead of reflect-cpp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "meson>=1.3.0",
    "ninja>=1.11.0",
    "pytest>=7.0.0",
    "pytest-cpp>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cpp>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
cpp_files = "test_*.cpp"
cpp_harness = "gtest"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cpp>=2.5.0",
]
